// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusCard good service 1`] = `
.c0 {
  padding: 12px;
  color: #fff;
  background-color: #06a020;
  width: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 6px;
}

.c0 hr {
  width: 80%;
  margin: 12px 0;
}

<div
  className="c0"
  data-testid="statusCard"
>
  <span>
    Bakerloo
  </span>
  <hr />
  <span>
    Good Service
  </span>
</div>
`;

exports[`Storyshots StatusCard severe delays 1`] = `
.c0 {
  padding: 12px;
  color: #fff;
  background-color: #e51919;
  width: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 6px;
}

.c0 hr {
  width: 80%;
  margin: 12px 0;
}

<div
  className="c0"
  data-testid="statusCard"
>
  <span>
    Central
  </span>
  <hr />
  <span>
    Severe Delays
  </span>
</div>
`;
